--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/App.css">
-    <title>Space Travel</title>
+    <!-- HTML Meta Tags -->
+<title>Space Travel</title>
+<meta name="description" content="Wanna travel to the space? Let's go......">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://journeytothespace.netlify.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Space Travel">
+<meta property="og:description" content="Wanna travel to the space? Let's go......">
+<meta property="og:image" content="">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="journeytothespace.netlify.app">
+<meta property="twitter:url" content="https://journeytothespace.netlify.app/">
+<meta name="twitter:title" content="Space Travel">
+<meta name="twitter:description" content="Wanna travel to the space? Let's go......">
+<meta name="twitter:image" content="">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
+    <noscript>It looks like javascript is disabled in your browser. Please enable javascript to use this website.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
